--- a/src/main/resources/language/en_us.lang.yml
+++ b/src/main/resources/language/en_us.lang.yml
@@ -1,17 +1,51 @@
+## Extra Information:
+## This is the default language file for Disco Armor.
+## The default language is "en_us", also known as English (United States).
+## Context will be added as YAML comments above the string.
+
+## The color scheme for messages is gray and sometimes red.
+## Command feedback that is successful should always be green.
+## Error messages should always be red.
+## Variables in messages can be gray or white.
+
+## Messages use the MiniMessage format in non-strict mode.
+## More information about MiniMessage can be found here:
+## https://docs.adventure.kyori.net/minimessage/format.html
+
+---
+# The language code for this file.
+language-name: "en_us"
+
+# The format for decimal numbers.
+# The United States uses the number and two decimal places
+decimal-format: "0.00"
+
 error:
-  player-only: "&cOnly players can execute this command."
-  invalid-pattern: "&7{pattern}&c is not a valid pattern."
-  prevent-removal: "&cYou are not allowed to remove your disco armor."
+  player-only: "<red>Only players can execute this command.</red>"
+  invalid-pattern: "<red><gray>{pattern}</gray> is not a valid pattern.</red>"
+  prevent-removal: "<red>You are not allowed to remove your disco armor.</red>"
 
 glow:
-  enabled: "&7Glow Effect: &aON"
-  disabled: "&7Glow Effect: &cOFF"
+  enabled: "<gray>Glow Effect:</gray> <green>ON</green>"
+  disabled: "<gray>Glow Effect:</gray> <red>OFF</red>"
 
 command:
   usage:
-    - "&f/disco-armor on&7: Open the menu to choose a pattern."
-    - "&f/disco-armor off&7: Disable your disco armor."
-    - "&f/disco-armor glow&7: Toggle the enchantment effect on your armor."
-    - "&f/disco-armor select&7: Manually choose an armor type."
-  reload-success: "&aSuccessfully reloaded the configuration files."
-  change-type: "&aSuccessfully changed your armor pattern to &7{pattern}&a."
+    - "<white>/disco-armor on</white><gray>: Open the menu to choose a pattern.</gray>"
+    - "<white>/disco-armor off</white><gray>: Disable your disco armor.</gray>"
+    - "<white>/disco-armor glow</white><gray>: Toggle the enchantment effect on your armor.</gray>"
+    - "<white>/disco-armor select</white><gray>: Manually choose an armor type.</gray>"
+  reload-success: "<green>Successfully reloaded the configuration files.</green>"
+  change-type: "<green>Successfully changed your armor pattern to <gray>{pattern}</gray>.</green>"
+
+broadcast:
+  enabled: "<rainbow><obfuscated>i</obfuscated>Disco Armor<obfuscated>i</obfuscated></rainbow>"
+  disabled: "<bold><dark_red>:(</dark_red></bold>"
+
+menu-title: "<underline>Disco Armor Menu</underline>"
+armor-item:
+  display-name: "<rainbow>Disco Armor</rainbow>"
+  lore:
+    - "<gray>This is an amazing armor set.</gray>"
+    - "<gray>You can only remove it by</gray>"
+    - "<gray>typing <green>/disco-armor off</green>.</gray>"
